# CaseGames

./: CMakeLists.txt  README.md  steps  temp
Hitman/: CMakeLists.txt  steps
Hitman/resources/: hitman.db
Hitman/src/: SQLUpdater.cpp  main.cpp  main.h  resourceUpdater.cpp.in
Licenses/: BSD3.txt  FTL.txt  zlib.txt
